isLegalNameChar(char ch, boolean first, @Nullable SqlDialect dialect) Move back to preferring column.getName() to column.getMetaDataName() finally switch DatasetDefinition.getDatasetRows() to use queryTableInfo Fixes for column that support missing values